# Flutter-Actix-App

./: .gitignore  LICENSE  README.md  db-scheme.drawio  docker-compose.yml
backend/: .env  .env.docker  .env.template  Cargo.toml  Dockerfile  README.md  diesel.toml
backend/configuration/: base.yaml  production.yaml
backend/migrations/: 20240822192959_init.sql  20240826113947_add_locale_to_user.sql  20240826193142_add_theme_to_users.sql  20240901193503_remove_otp_is_enabled.sql  20240905195249_add_password_is_expired_to_users.sql  20241227213408_update_user_tokens.sql  20241227223827_add_is_admin_on_users.sql  20241227230434_device_info_is_non_nullable.sql  20241227231046_token_id_is_uuid_in_user_tokens.sql  20241228112203_update_user_tokens.sql  20241228113400_update_user_tokens.sql  20241228135151_update_user_tokens.sql  20241228150913_update_user_tokens.sql  20241228151522_remove_device_in_user_tokens.sql
backend/src/: configuration.rs  lib.rs  main.rs  model.rs  models.rs  response.rs  schema.rs  service.rs  startup.rs
backend/src/auth/helpers/: serializer.rs  token.rs
backend/src/auth/routes/: login.rs  otp.rs  profile.rs  service.rs  signup.rs  token.rs
backend/src/auth/structs/: model.rs  request.rs  response.rs
backend/src/core/constants/: errors.rs
backend/src/core/helpers/: mock_now.rs
backend/src/core/middlewares/: token_validator.rs
backend/src/core/routes/: health_check.rs
backend/src/core/structs/: responses.rs
backend/src/features/auth/: mod.rs
backend/src/features/auth/application/: mod.rs
backend/src/features/auth/domain/: errors.rs  mod.rs
backend/src/features/auth/helpers/: errors.rs  password.rs  serializer.rs  token.rs  username.rs
backend/src/features/profile/: mod.rs
backend/src/migrations/2024-08-19-071441_create_users/: up.sql
backend/src/profile/routes/: profile.rs
backend/tests/: helpers.rs  mod.rs
backend/tests/auth/: login.rs  logout.rs  otp.rs  recovery.rs  signup.rs  token.rs
backend/tests/auth/recovery/: recover_account_using_2fa.rs  recover_account_using_password.rs  recover_account_without_2fa_enabled.rs
backend/tests/core/: health_check.rs
backend/tests/health_check/: health_check.rs
backend/tests/profile/: devices.rs  profile.rs  set_password.rs  update_password.rs
db/: .env  .env.template  (+1 more)
(+315 files in other folders)
