[package]
name = "reallystick"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
base32 = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
rand = "0.8.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
totp-rs = "5.6.0"
uuid = { version = "1.10.0", features = ["v4"] }
