[package]
name = "flutteractixapp"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "flutteractixapp"

[[test]]
name = "tests"
path = "tests/mod.rs"

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
base32 = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures-util = "0.3.30"
jsonwebtoken = "=9.3.0"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.125"
sha2 = "0.10.8"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "=1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tokio-postgres = "0.7.11"
totp-rs = "5.6.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
